# prague-europe-weather-pipeline

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: usage.md
sql/: 002_create_raw_tables.sql  003_create_staging_tables.sql  004_load_staging_from_raw.sql  005_create_mart_tables.sql  006_load_mart_from_staging.sql
src/pipeline/: cli.py  config.py  main.py  paths.py  sql_runner.py  wait_for_db.py
src/pipeline/dashboard/: __init__.py  app.py  service.py
src/pipeline/dashboard/static/: dashboard.css  theme.js
src/pipeline/dashboard/templates/: index.html
src/pipeline/ingestion/: fetch_weather.py  normalize_response.py
src/pipeline/load/: load_raw.py
src/pipeline/quality/: __init__.py  checks.py
src/pipeline/utils/: __init__.py  db.py  file_utils.py
tests/: test_cli.py  test_config.py  test_dashboard.py  test_dashboard_service.py  test_file_utils.py  test_ingestion.py  test_load_raw.py  test_paths.py  test_quality_checks.py  test_sql_runner.py  test_wait_for_db.py
tests/fixtures/raw/source=open_meteo/year=2099/month=01/day=01/run_id=20990101T000000Z/: city=berlin.json  city=budapest.json  city=prague.json  city=vienna.json  city=warsaw.json
